--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "nft-dapp-smart-contract",
+  "name": "nft-smartcontract",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mujohn26/nft-smartcontract.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mujohn26/nft-smartcontract/issues"
+  },
+  "homepage": "https://github.com/mujohn26/nft-smartcontract#readme",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
@@ -18,6 +26,7 @@
     "hardhat": "^2.8.4"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0"
+    "@openzeppelin/contracts": "^4.5.0",
+    "dotenv": "^16.0.0"
   }
 }
